--- a/styles.css
+++ b/styles.css
@@ -144,10 +144,10 @@ a:hover{
   #level-title{
     font-size: 1.25rem;
   }
-  .button{
+/*   .button{
     height: 120px;
     width: 120px;
-  }
+  } */
   p{
     font-size: 1.75rem;
   }
