--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,10 @@ p{
   border: 10px solid black;
 }
 
+.know-me{
+  margin: 100px 0;
+}
+
 .bottom-container{
   background-color: #66BFBF;
   padding: 50px 0 20px;
